// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`first should match snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`first should must render two categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      cat="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      cat="One Punch"
      key="One Punch"
    />
  </ol>
</Fragment>
`;
